bingd 0.4
===========

* Update to AnnotationHub 2.0

* Add AnnotationHubList class to store related groups AnnotationHub objects
* Add AnnotationHub and AnnotationHubList methods to calc.enrich()
* Add AnnotationHub method to findOverlaps()
* Add AnnotationHub and AnnotationHubList methods to featureOverlaps()
* Add AnnotationHub and AnnotationHubList methods to annotate.gwas()
============

* improve performance of calc.enrich()
* improve performance of overlap functions with GIntervalTrees
* add TravisCI
* improve documentation

bingd 0.3.4
===========

* Require AnnotationHub v1.6.0
* Replace plyr with dplyr


bingd 0.3.3.3
=============

* Require AnnotationHub v1.4.0

bingd 0.3.3.2
=============≥

* export consolidate()
* calc.conditionals() reports feature probabilities when verbose = TRUE

bingd 0.3.3.1
=============

* export S4 methods

bingd 0.3.3
===========

* risk.threshold() is now a calc.threshold() and adds a verbose option 
* add option to supply prob.risk in  calc.bayes() 

* overlapsAny() is now findOverlaps(), which returns HitsList or integer vectors
  to be consistent with with the IRanges package
* the new featureOverlaps() function is the exported version of findOverlaps(),
  which returns a logical vector for each feature, nested within an list that
  mirrors the structure of the supplied FeatureList object

* removed unused fix_chrs() and order_chrs() code
* removed rtracklayer and GenomicFeatures as dependencies
* removed reshape2 dependency

* documentation improvements, switched to roxygen2 4.0

bingd 0.3.2
===========

* AnnotatedGWAS class now an extension of the GWAS class
* calc.pr() is now calc.priors()
* calc.priors() works with GWAS as well as AnnotatedGWAS objects
* label.groups() is about 4x faster now


bingd 0.3.1
===========

* Add zscore as an optional argument when constructing a GWAS object

* load.feature() checks loaded object class is GRanges

* Add verbose option to calc.bayes