@@ -21,24 +21,6 @@ setGeneric("annotate.gwas",
 })
 
 #' @rdname annotate.gwas
-setMethod("annotate.gwas", c(object = "GWAS", feature.list = "FeatureList"), 
-  function(object, feature.list) {
-    
-    overlaps <- featureOverlaps(query = object, subject = feature.list)
-    
-    f.index <- lapply(overlaps, function(x) make.names(names(x)))
-    overlaps <- do.call("DataFrame", as(overlaps, "list"))
-    names(overlaps) <- unlist(f.index)
-    
-    mcols(object) <- DataFrame(mcols(object), overlaps)
-    
-    object <- new("AnnotatedGWAS", object, 
-                  featureIndex = as(f.index, "SimpleList"))
-      
-    return(object)
-})
-
-#' @rdname annotate.gwas
 setMethod("annotate.gwas", c(object = "GWAS", feature.list = "AnnotationHubList"), 
   function(object, feature.list) {
     overlaps <- featureOverlaps(query = object, subject = feature.list)
